# lycaon

./: .eslintrc.json  .gitignore  Anchor.toml  LICENSE  README.md  goals.md  ideas.md  package.json  todo.md
app/: .eslintrc.json  package.json  tailwind.config.js
app/components/: Container.tsx  Header.tsx  RaffleComponent.tsx  WalletButton.tsx
app/contracts/: index.ts  raffle.ts  utils.ts
app/contracts/idl/: raffle.json
app/contracts/types/: raffle.ts
app/pages/: _app.tsx  index.tsx
app/utils/: getNFTMetadata.ts
programs/raffle/: Cargo.toml
programs/raffle/src/: lib.rs
programs/raffle/src/instructions/: buy_tickets.rs  claim_prize.rs  claim_proceeds.rs  create_raffle.rs  finish_raffle.rs  init_vault.rs  lock_raffle.rs  mod.rs  pick_winners.rs
programs/raffle/src/state/: entrants.rs  mod.rs  raffle.rs  tickets.rs  vault.rs
tests/: raffle.ts  utils.ts
